--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,11 +23,11 @@ pipeline {
             steps {
                 sh 'mvn test'
             }
-            post {
+            /*post {
                 success {
-                    junit 'target/surefire-reports/**/*.xml' 
+                    junit 'target/surefire-reports/** /*.xml' 
                 }
-            }
+            } */
         }
         stage('Packaging') {
             steps {
