Update deploy configuration

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@
 hs_err_pid*
 
 ##########################
+## VS code
+##########################
+.vscode/
+
+##########################
 ## Maven
 ##########################
 target/
