--- a/jenkinsfile
+++ b/jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
         }
         stage('Deploy') {
             steps {
-                echo 'Pending...'
+                sh 'mvn deploy'
             }
 
         }
