--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,11 +34,16 @@ pipeline {
                 sh 'mvn package'
             }
         }
-        stage('Deploy') {
+         stage('Deploying') {
+            steps {
+                sh 'mvn deploy'
+            }
+        }
+        /*stage('Deploy') {
             steps {
                 nexusPublisher nexusInstanceId: 'nexus', nexusRepositoryId: 'maven-releases', packages: []
             }
 
-        }
+        }*/
     }
 }
