--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>commons</artifactId>
 	<version>1.1.0</version>
 
-	<name>restclient</name>
+	<name>Commons</name>
 	<url>https://github.com/srhojo/Commons</url>
 	<description>Common utility library</description>
 
